Changes in Release 2.2.3
=============================================
[JOST-70] - ActionType typo in xacml20-context-config.xml
[JOST-72] - XACMLAuthzDecisionQuery : returncontext attribute not handled properly by marshaller
* Add various XACML constants


Changes in Release 2.2.2
=============================================
[JOST-66] Cleanup ArtifactMap related classes
[JOST-67] SAML 1 and 2 POST encoders rely on system encoding when providing the bytes for Base64 encoding
* Update logging libraries to grab some bug fixes

Changes in Release 2.2.1
=============================================
[JOST-64] - Multiple calls to ChainingMetadataProvider#getMetadata result in "EntitiesDescriptor is already the child of another XMLObject" exception

Changes in Release 2.2.0
=============================================
[JOST-32] - MetadataSignatureFilter should verify signatures on RoleDescriptor and AffiliationDescriptor elements
[JOST-35] - some XACML elements not correctly marshalled
[JOST-37] - inline policies in XACML policy sets cannot be unmarshalled
[JOST-38] - Marshalling problem for AttributeAssignmentType
[JOST-39] - ReferencedPolicies not used correctly
[JOST-40] - Misspelled method name in ReferencedPoliciesType
[JOST-42] - Missing function for PolicySetType choice group
[JOST-43] - Method setExpression() of class ExpressionType doesn't work
[JOST-44] - Method getAttributeValues() of AttributeType should return List<AttributeValueType>
[JOST-45] - Missing StatusMessage and Description XACML object implementations
[JOST-46] - Method getPolicies of PolicySetType returns null
[JOST-48] - Add feature to require validUntil expiration on metadata
[JOST-49] - cacheDuration and validUntil values in metadata are ignored
[JOST-50] - Security policy rule which evaluates and enforces SAML 2 metadata SPSSODescriptor/@AuthnRequestsSigned
[JOST-51] - Issue with multiple obligation handlers